# cinch

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-COMMERCIAL  Makefile  README.md  buf.gen.yaml  buf.yaml  cinch.yaml  go.mod  lefthook.yml  proto
.claude/commands/: cinch-copy.md
.github/workflows/: ci.yml  proto-sync-relay.yml  publish.yml
apps/desktop/: .gitignore  CLAUDE.md  README.md  lefthook.yml  package.json  pnpm-lock.yaml
apps/desktop/scripts/: check-version-parity.sh  prepare-cli-binary.mjs
apps/desktop/src/: App.css  App.test.tsx  App.tsx  ConfirmDialog.tsx  CopyToastOverlay.tsx  RetentionSlider.tsx  SettingsPane.tabs.test.tsx  SettingsPane.test.tsx  (+5 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: app_menu.rs  app_state.rs  deep_link.rs  dock_icon.rs  events.rs  lib.rs  main.rs  media.rs  paths.rs  protocol.rs  retention.rs  startup.rs  sync_status.rs  tray.rs  update_check.rs  validate.rs  window_manage.rs  window_snap.rs  writer_restart.rs  writer_setup.rs
apps/desktop/src-tauri/src/auth/: backoff.rs  mod.rs  pending_codes.rs  state.rs
apps/desktop/src-tauri/src/clipboard/: auto_paste.rs  mod.rs  monitor.rs  service.rs
apps/desktop/src-tauri/src/clipboard/backend/: macos.rs  mod.rs  types.rs
apps/desktop/src-tauri/src/commands/: auth.rs  clips.rs  mod.rs  relays.rs  updater.rs  window.rs
apps/desktop/src-tauri/src/commands/auth/: deeplink.rs  display_name.rs  mod.rs  providers.rs  remote_login.rs  sign_in.rs  sign_out.rs  ssh_pair.rs
apps/desktop/src-tauri/src/commands/clips/: action_shortcut.rs  agent_resume.rs  clip_ops.rs  device_cache.rs  devices.rs  global_shortcut.rs  misc.rs  mod.rs  prompt_pack.rs  retention.rs  source_settings.rs  transform.rs
apps/desktop/src-tauri/src/commands/window/: copy_toast.rs  drag.rs  geometry.rs  mod.rs  overlay.rs
apps/desktop/src-tauri/src/store/db/: clips.rs  migrations.rs  mod.rs  pinning.rs  retention.rs  settings.rs  sync_queue.rs
apps/desktop/src-tauri/src/telemetry/: backend_otlp.rs  backend_posthog.rs  id.rs  mod.rs
apps/desktop/src-tauri/src/tests/: decrypt_failure_recovery_test.rs  mod.rs  offline_queue_test.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth_state.rs  client_info.rs  desktop_handoff.rs  exit.rs  fmt.rs  io.rs  key_state.rs  lib.rs  macos_pasteboard.rs  main.rs  runtime.rs  update_check.rs
crates/cli/src/commands/: account.rs  admin.rs  agent_hook.rs  ai.rs  auth.rs  auth_recovery.rs  clip.rs  copy.rs  device.rs  devices.rs  edit.rs  fleet.rs  get.rs  history.rs  list.rs  mod.rs  nickname.rs  pair.rs  paste.rs  pin.rs  pinned.rs  plan.rs  pull.rs  push.rs  retention.rs  revoke.rs  rm.rs  search.rs  send.rs  session.rs  shared.rs  sources.rs  telemetry.rs  transform.rs  unpin.rs  use_.rs
crates/cli/src/commands/auth/: approve.rs  login.rs  logout.rs  mod.rs  retry_key.rs  set_name.rs  status.rs
crates/cli/src/commands/mcp/: mapping.rs  metrics.rs  mod.rs  protocol.rs  query.rs
crates/cli/src/telemetry/: backend_otlp.rs  backend_posthog.rs  event.rs  id.rs  mod.rs
crates/cli/src/update/: cache.rs  manifest.rs  mod.rs  notifier.rs  pm.rs  self_update.rs  source.rs
crates/cli/tests/: deprecation.rs  onboarding.rs  use_cmd.rs
crates/client-core/: Cargo.toml  LICENSE  README.md  build.rs
crates/client-core/examples/: lockfile_demo.rs
crates/client-core/proto/cinch/v1/: auth.proto  clips.proto  devices.proto  event_stream.proto  me.proto
crates/client-core/src/: agent_resume.rs  auth.rs  auth_session.rs  classify.rs  clipfile.rs  config.rs  config_migrate.rs  credstore.rs  crypto.rs  edit.rs  http.rs  key_exchange.rs  lib.rs  machine.rs  media.rs  pair_script.rs  protocol.rs  recovery.rs  rest.rs  transform.rs  transport.rs  version.rs  ws.rs
crates/client-core/src/http/: auth.rs  clips.rs  devices.rs  key_bundle.rs  mod.rs
crates/client-core/src/session/: mod.rs  model.rs  render.rs  source.rs
crates/client-core/src/store/: clips.rs  devices.rs  migration.rs  mod.rs  models.rs  prefix.rs  queries.rs  retention.rs  schema.rs  search.rs  settings.rs  source_apps.rs  sync_state.rs
crates/client-core/src/sync/: backlog_flusher.rs  capture.rs  local_pusher.rs  lockfile.rs  map.rs  mod.rs  reader.rs  reconnect.rs  writer.rs
crates/client-core/src/transform/: encoding.rs  json.rs  markdown.rs  redact.rs  text.rs
crates/client-core/src/ws/: decode.rs  decrypt.rs
crates/client-core/tests/: device_code_complete.rs  device_code_flow.rs  headless_marker.rs  key_bearer.rs  relay_integration.rs  retry_key_notified.rs  store_migration.rs  sync_lockfile.rs  sync_reader.rs  sync_writer.rs  two_device_bootstrap.rs  version_helper.rs  wire_vectors.rs
docs/: headless-send-and-fleet-read.md  release-secrets.md
docs/plans/: 2026-05-26-transform-copy-actions-design.md  2026-05-26-transform-copy-actions.md
go/: README.md
plans/: 2026-05-24-background-menubar-agent.md  2026-05-24-cinch-mcp.md  2026-05-25-background-running-first-close-hint.md  2026-06-01-unify-desktop-cli-store.md  2026-06-02-monorepo-refactor.md  2026-06-04-desktop-settings-replan.md
scripts/: .secrets.env.template  bump-versions.sh  check-version-parity.sh  clean-agent-worktree.sh  e2e-image-roundtrip.sh  generate-release-notes.sh  generate-tauri-keypair.sh  headless-loop-smoke.sh  make-updater-manifest.sh  new-agent-worktree.sh  next-version.sh  update-homebrew-cask.sh  update-homebrew-formula.sh  upload-secrets.sh  verify-secrets.sh
specs/: 2026-05-24-ai-clipboard-mcp-design.md  2026-05-24-background-menubar-agent-design.md  2026-05-25-background-running-first-close-hint-design.md  2026-06-01-unify-desktop-cli-store-design.md  2026-06-02-session-copy-design.md  2026-06-04-cinch-send-design.md  2026-06-04-desktop-settings-replan-design.md  2026-06-13-customizable-clip-action-shortcuts-design.md  2026-06-15-agent-resume-on-exit-design.md  desktop-redesign-brief.md
(+75 files in other folders)
