[package]
name = "cinch-cli"
version = "0.2.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pipe remote output to your local clipboard. Instantly."

[[bin]]
name = "cinch"
path = "src/main.rs"

[dependencies]
client-core = { package = "cinchcli-core", path = "../client-core" }
reqwest = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
arboard = { workspace = true }
inquire = { workspace = true }
indicatif = { workspace = true }
open = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
semver = "1"
is-terminal = "0.4"
tempfile = "3"
thiserror = { workspace = true }
chrono = { workspace = true }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
futures-util = { workspace = true }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
wiremock = "0.6"
