[package]
name = "cinch-cli"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pipe remote output to your local clipboard. Instantly."

[lib]
name = "cinch_cli"
path = "src/lib.rs"

[[bin]]
name = "cinch"
path = "src/main.rs"

[dependencies]
client-core = { package = "cinchcli-core", path = "../client-core" }
reqwest = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
arboard = { workspace = true }
inquire = { workspace = true }
indicatif = { workspace = true }
open = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
semver = "1"
is-terminal = "0.4"
tempfile = "3"
thiserror = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
futures-util = { workspace = true }
uuid = { version = "1", features = ["v7"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

# skim's terminal UI (tuikit) depends on the Unix-only `nix` crate and does not
# compile on Windows. The interactive session/answer picker is therefore gated
# to non-Windows targets; on Windows, use --last/--all or a session id instead.
[target.'cfg(not(target_os = "windows"))'.dependencies]
skim = "0.16"

[dev-dependencies]
wiremock = "0.6"

[lints]
workspace = true
