[package]
name = "cinch-desktop"
version = "0.11.1"
description = "Cinch Desktop — Multi-server clipboard dashboard"
authors = ["jinmu"]
edition = "2021"

[lib]
name = "cinch_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Desktop builds for macOS + Windows. Platform-specific deps live in the
# target-scoped tables at the bottom of this file. Source code that
# touches them is gated with `#[cfg(target_os = "...")]`.
[dependencies]
client-core = { package = "cinchcli-core", path = "../../../crates/client-core", features = ["specta"] }
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dirs = "6"
sha2 = "0.11"
uuid = { version = "1", features = ["v7"] }
image = { version = "0.25", default-features = false, features = ["png", "tiff"] }
notify = "8"
notify-debouncer-full = "0.7"
base64 = "0.22"
specta-typescript = "0.0.11"
specta = { version = "2.0.0-rc.24", features = ["derive"] }
tauri-specta = { version = "2.0.0-rc.24", features = ["derive", "typescript"] }
cinch-cli = { path = "../../../crates/cli", optional = true }

[features]
default = ["builtin-cli"]
builtin-cli = ["dep:cinch-cli"]

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[dev-dependencies]
wiremock = "0.6"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }
